--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7,
@@ -11,6 +12,9 @@
     "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
     "react-scripts": "4.0.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "diacritic": "^0.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
