--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-geolocated": "^3.1.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
     "bootstrap": "^4.6.0"
   },
   "scripts": {
